# sf-workshop-2019-08-28

./: .gitignore  Cargo.toml  README.md  index.html  main.js  rebuild.sh  style.css
src/: bullet.rs  console.rs  dom_helpers.rs  enemy.rs  lib.rs  scene.rs  ship.rs
