[package]
name = "shooter"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "=0.3.27"
wasm-bindgen = "=0.2.50"

[dependencies.web-sys]
version = "=0.3.27"
features = [
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "Node",
    "MouseEvent",
    "Window",
]

[profile.release]
overflow-checks = true
