[package]
name = "shooter"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "=0.3.60"
wasm-bindgen = "=0.2.83"

[dependencies.web-sys]
version = "=0.3.60"
features = [
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "Node",
    "MouseEvent",
    "Window",
]

[profile.release]
overflow-checks = true
